@@ -1,12 +1,21 @@
 package properties;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import user.User;
 
 public final class PropertyQueryService {
+    private static final Map<UUID, Property> propertiesByID = Property.getAllPropertiesMap();
+    private static final Map<User, Set<UUID>> propertiesByUser = new HashMap<>();
+    private static final Map<String, Set<UUID>> propertiesByCity = new HashMap<>();
     private static PropertyQueryService instance;
 
     public static PropertyQueryService getInstance() {
@@ -16,21 +25,61 @@ public final class PropertyQueryService {
 
     private PropertyQueryService() {};
 
+    public static void indexProperty(Property property) {
+        // by user
+        propertiesByUser.computeIfAbsent(property.getUser(), k -> new HashSet<>())
+            .add(property.getPropertyID());
+
+        // by city
+        String city = property.getCity().toLowerCase();
+        propertiesByCity.computeIfAbsent(city, k -> new HashSet<>())
+            .add(property.getPropertyID());
+    }
+
+    public static void removeFromIndex(Property property) {
+        // by user
+        propertiesByUser.getOrDefault(property.getUser(), Collections.emptySet())
+            .remove(property.getPropertyID());
+
+        // by city
+        String city = property.getCity().toLowerCase();
+        propertiesByCity.getOrDefault(city, Collections.emptySet())
+            .remove(property.getPropertyID());
+    }
+
+    public static void updateProperty(Property property) {
+        if (property != null && property.getPropertyID() != null) {
+            Property.getAllPropertiesMap().put(property.getPropertyID(), property);
+        }
+    }
+
     public static Property getPropertyByID(UUID propertyID) {
-        if (propertyID == null) return null;
-        Map<UUID, Property> properties = Property.getAllPropertiesMap();
-        return properties.get(propertyID);
+        return propertiesByID.get(propertyID);
     }
 
     public static List<Property> getAllProperties() {
-        Map<UUID, Property> properties = Property.getAllPropertiesMap();
-        return properties.values().stream().toList();
+        return new ArrayList<>(propertiesByID.values());
     }
 
     public static List<Property> getUserProperties(User user) {
-        Map<UUID, Property> properties = Property.getAllPropertiesMap();
-        return properties.values().stream() // gets all properties
-            .filter(property -> property.getUser().equals(user)) // gets all properties for user
-            .toList();
+        Set<UUID> propertyIDs = propertiesByUser.getOrDefault(
+            user, 
+            Collections.emptySet()
+        );
+        return propertyIDs.stream()
+            .map(propertiesByID::get)
+            .collect(Collectors.toList());
+    }
+
+    public static List<Property> getPropertiesByCity(String city) {
+        if (city == null) { return getAllProperties(); }
+
+        Set<UUID> propertyIDs = propertiesByCity.getOrDefault(
+            city.toLowerCase(), 
+            Collections.emptySet()
+        );
+        return propertyIDs.stream()
+            .map(propertiesByID::get)
+            .collect(Collectors.toList());
     }
 }
